--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 	<link rel="import" href="elements/hello-element.html">
 </head>
 <body>
-	<hello-element></hello-element>
+	<hello-element>
+		<h1>This is a heading</h1>
+		<ul class="listitems">
+			<li>one</li>
+			<li>teow</li>
+			<li>three</li>
+
+		</ul>
+	</hello-element>
 </body>
 </html>
