--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
 	<meta charset="UTF-8">
 	<title>Part 2</title>
 	<script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
+	<script>
+		// window.Polymer = {
+		// 	dom: 'shadow'
+		// }
+	</script>
 	<link rel="import" href="elements/hello-element.html">
 </head>
 <body>
 	<hello-element>
-		<h1>This is a heading</h1>
+		<span class="headingText">This is a heading</span>
 		<ul class="listitems">
 			<li>one</li>
 			<li>teow</li>
