Demos light and root dom selection

--- a/elements/hello-element.html
+++ b/elements/hello-element.html
@@ -3,18 +3,51 @@
 <dom-module id="hello-element">
 
 	<template>
-		<h1><content select=".headingText"></content></h1>
-		<hr>
-		<content select="ul"></content>
+		<!-- Local DOM -->
+		      <h2 id="alertHead"></h2>
+		      <ul class="alert-list-inner">
+		        <li>Alert 1</li>
+		        <li>Alert 2</li>
+		        <li>Alert 3</li>
+		      </ul>
+		      <content></content>
 	</template>
 </dom-module>
 
 <script>
 	Polymer({
 		is: 'hello-element',
-		attached: function(){
-			console.log('this is using shady dom selector Polymer.dom(this.root).children) ', Polymer.dom(this.root).children);
-			console.log('this is using document queryselector document.querySelector(\'hello-element\').children) ', document.querySelector('hello-element').children);
+		ready: function (){
+			// console.log(this.)
+			console.log("this", this);
+			          console.log("this.root", this.root);
+			          console.log("this.$", this.$);
+			          console.log(Polymer.dom(this).children); 
+			          
+			          var lightDomDiv = document.querySelector("hello-element").querySelector(".alert-list");
+			          console.log("lightDomDiv", lightDomDiv);
+
+			          //Because retrieving the children of a given content tag is a common pattern, 
+			          //the element API includes getContentChildNodes and getContentChildren utility methods
+			          var contentChildren = this.getContentChildren('content')[0];
+			          console.log("contentChildren", contentChildren);
+
+			          //Returns a list of effective child nodes for this element.
+			          var effectiveChildrenNodes = Polymer.dom(this).getEffectiveChildNodes();
+			          console.log("effectiveChildrenNodes", effectiveChildrenNodes);
+
+			          //Returns a list of effective child elements for this element.
+			          var effectiveChildren = this.getEffectiveChildren();
+			          console.log("effectiveChildren", effectiveChildren);
+
+			          //getDestinationInsertionPoints only returns useful results when called on an element that’s being distributed.
+			          var insertedTo = Polymer.dom(lightDomDiv).getDestinationInsertionPoints()[0];
+			          console.log("insertedTo", insertedTo);
+			          
+			          var insertionPoint = Polymer.dom(this.root).querySelector('content');
+			          //Note that getDistributedNodes only returns useful results when called on a <content> element, and
+			          var distributed = Polymer.dom(insertionPoint).getDistributedNodes()[0];
+			          console.log("distributed", distributed);
 		}
 	});
 </script>
