--- a/index.html
+++ b/index.html
@@ -13,13 +13,7 @@
 </head>
 <body>
 	<hello-element>
-		<span class="headingText">This is a heading</span>
-		<ul class="listitems">
-			<li>one</li>
-			<li>teow</li>
-			<li>three</li>
-
-		</ul>
+		<ul class="alert-list"><li>Alert List 4</li></ul>
 	</hello-element>
 </body>
 </html>
